--- a/src/components/category/category.scss
+++ b/src/components/category/category.scss
@@ -1,10 +1,4 @@
-.categories-container {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  grid-column: span 2;
-}
+
 
 .category-container {
   min-width: 30%;
@@ -16,7 +10,9 @@
   border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
-
+  h2 {
+    font-family: 'Shadows Into Light';
+  }
   &:hover {
     cursor: pointer;
 
