--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+  text-decoration: none;
+  color:black;
+}
+#root {
+  display: grid;
+  grid-template-rows: 100px 1fr;
+}
+* {
+  box-sizing: border-box;
+}
