--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -17,10 +17,10 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-
     .nav-link {
       padding: 10px 15px;
       cursor: pointer;
+      text-transform: uppercase;
     }
   }
 }
